[package]
name = "lt-problem"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbqueue = "0.4.8"
postcard = "0.5.1"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
